# hyperast

./: README.md  pyproject.toml
examples/: ast.py
examples/polycirc/: __main__.py  codegen.py  primitive.py  signature.py
hyperast/: __init__.py  analyse.py  builder.py  decorator.py
tests/: test_analyse.py  test_codegen.py  test_decorator.py  test_roundtrip.py
