[project]
name = "hyperast"
version = "0.1.0"
authors = [
  { name="Paul Wilson", email="paul@statusfailed.com" }
]
description = "Build hypergraphs from pythonic functions"
readme = "README.md"
requires-python = ">= 3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "numpy~=1.23.3",
  "scipy~=1.10.0",
]
[project.optional-dependencies]
dev = [
  "hypothesis",
  "pytest",
]

[project.urls]
"Homepage" = ""
"Github" = ""

# export type annotations
#[tool.setuptools.package-data]
#"hyperast" = ["py.typed"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["hyperast"]

[tool.pytest.ini_options]
testpaths = [
  "tests"
]
